--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "babel-loader": "8.1.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.4.1",
     "@heroicons/react": "^1.0.2",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^11.2.7",
